[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { version = "0.7.39", features = ["validation", "uuid", "copy", "strict"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
webauthn-proto = { git = "https://github.com/valeralabs/webauthn" }
scylla = {version = "0.7.0", optional = true}
bytecheck = { version = "0.6.9", features = ["uuid"] }

[features]
default = ["scylla"]
wasm = ["uuid/js"]
scylla = ["dep:scylla"]
